WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239736
Fix the tvOS and watchOS builds after
r293231
https://bugs.webkit.org/show_bug.cgi?id=239736
Summary
Fix the tvOS and watchOS builds after r293231
Aditya Keerthi
Reported
2022-04-25 11:45:15 PDT
...
Attachments
[fast-cq] Patch
(2.65 KB, patch)
2022-04-25 11:50 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2022-04-25 11:45:32 PDT
rdar://92283605
Aditya Keerthi
Comment 2
2022-04-25 11:50:53 PDT
Created
attachment 458289
[details]
[fast-cq] Patch
EWS
Comment 3
2022-04-25 12:59:48 PDT
Committed
r293339
(
249960@main
): <
https://commits.webkit.org/249960@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458289
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug