Cherry-pick r293339. rdar://problem/92283605

Fix the tvOS and watchOS builds after r293231
    https://bugs.webkit.org/show_bug.cgi?id=239736
    rdar://92283605

    Reviewed by Wenson Hsieh.

    * UIProcess/API/Cocoa/WKWebView.h:

    UIFindInteraction is marked unavailable on watchOS and tvOS.

    * UIProcess/API/Cocoa/WKWebView.mm:

    Use platform-checks rather than the existing HAVE macro, so that these
    methods are still implemented in older builds. There are no version
    checks in WKWebView.h.

    Canonical link: https://commits.webkit.org/249960@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293339 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/249903.2@safari-614.1.11-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-614.1.11-branch@293366 268f45cc-cd09-0410-ab3c-d52691b4dbfc